Fix address search and building comparison on firefox

--- a/src/styles/main/_buildling-report.scss
+++ b/src/styles/main/_buildling-report.scss
@@ -2,9 +2,7 @@
   margin: 0;
 
   h2 {
-    margin: 0;
     line-height: 1em;
-    display: inline;
   }
 
   input {
@@ -14,24 +12,14 @@
   th:first-child {
     overflow-x: hidden;
     text-overflow: ellipsis;
-    padding: 0 1em;
   }
 
-  td:first-child {
-    padding: 0.75em 1em;
-  }
-
-  th, td {
-    max-width: 11em;
-    padding: 0.5em;
+  td:first-child div, h2 {
+    margin: 0 1rem 0 0.5rem;
   }
 
   th + th, td + td {
-    padding-left: 0.25;
-  }
-
-  th:last-child, td:last-child {
-    padding-left: 0.25;
+    max-width: 11em;
   }
 
   th, label {
@@ -42,6 +30,7 @@
     overflow-x: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    margin: 0 0.25em;
     padding: 0.5em 1.75em 0.5em 1em;
     max-width: 10em;
     position: relative;
