--- a/src/styles/main/_search.scss
+++ b/src/styles/main/_search.scss
@@ -1,8 +1,19 @@
 .search-wrapper {
-  padding: .5em 1em;
+  padding: $base-spacing/4 1em;
+  border: 1px solid $base-border-color;
+  border-radius: 1em;
+  margin: 0.5em 1em;
+
+  .address-search:focus {
+    border-color: inherit;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
 
   .address-search {
-    padding: $base-spacing/4 .8em;
-    margin-bottom: 0;
+    padding: 0;
+    margin: 0;
+    border: 0 none;
+    display: block;
   }
 }
